--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Everything About Me</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
-    <body>
-        <h1>Everything About Me</h1>
+
+<head>
+    <title>Everything About Me</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <header>
+        <p>I was born and raised in Seattle WA, however I was pretty close to being born in Fiji. From what I\ve been told is
+            that my mom moved here before my dad and I was about 3 until my dad was able to move here. So I was pretty much
+            concieved in Fiji. Maybe a little TMI but I wonder how things would be if I was born and raised in Fiji.</p>
+
+        <header/>
+
+        <h2>My Top Ten GetAway</h2>
+        <ol>
+            <li>Fiji</li>
+            <li>Hawaii</li>
+            <li>California</li>
+            <li>New York</li>
+            <li>London</li>
+            <li>Buenos Aires</li>
+            <li>Amsterdam</li>
+            <li>Paris</li>
+            <li>Bahamas</li>
+            <li>Mexico</li>
+        </ol>
         <script src="app.js"></script>
-    </body>
+</body>
+
 </html>
