--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Mexico</li>
         </ol>
     </blockquote>
-<!script src="js/app.js"></script>
+<script src="js/app.js"></script>
 </body>
 
 </html>
